kubernetes/debug/ngnix/deployment.yml
# todo: Maybe replace this with whoami later? Is that the one who shows the headers and all that?
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "1m"
              memory: "1Mi"
            limits:
              memory: "128Mi"
              cpu: "200m"
