kubernetes/debug/ngnix/svc-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nginx-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
